test/scc/expr/semantic-errors/130.a
130.t:3:20: error: array index in initializer exceeds array bounds